make updates final
