# swagger.json
@@ -5,14 +5,30 @@
     "description": "This is an API for Inventory Management System",
     "version": "1.0.0"
   },
-  "host": "https://cse341-inventory.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
+      "/": {
+      "get": {
+        "tags": [
+          "Hello World"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/products/": {
       "get": {
+        "tags": [
+          "products"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -24,6 +40,9 @@
         }
       },
       "post": {
+        "tags": [
+          "products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -57,6 +76,9 @@
     },
     "/products/{id}": {
       "get": {
+        "tags": [
+          "products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -82,6 +104,9 @@
         }
       },
       "put": {
+        "tags": [
+          "products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -107,6 +132,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "products"
+        ],
         "description": "",
         "parameters": [
           {
@@ -134,6 +162,9 @@
     },
     "/transactions/": {
       "get": {
+        "tags": [
+          "transactions"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -145,6 +176,9 @@
         }
       },
       "post": {
+        "tags": [
+          "transactions"
+        ],
         "description": "",
         "parameters": [
           {
@@ -184,6 +218,9 @@
     },
     "/transactions/{id}": {
       "get": {
+        "tags": [
+          "transactions"
+        ],
         "description": "",
         "parameters": [
           {
